--- a/midtermHome.css
+++ b/midtermHome.css
@@ -13,6 +13,9 @@
     width: 900px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 10%;                            /*Vera*/
+    font-family: Arial, Helvetica, sans-serif;       /*Vera*/
+	line-height: 1.45;                               /*Vera*/
         
 }
 .div2 {
